name:                pushover
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DanMeakin/pushover#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Meakin
maintainer:          dan@danmeakin.com
copyright:           2017 Dan Meakin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pushover-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pushover
  default-language:    Haskell2010

test-suite pushover-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pushover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DanMeakin/pushover
